--- a/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Resources\Sample_RSS_Feed.xml" />
     <Compile Include="RssProvider.fs" />
     <Compile Include="MetalInjectionRss.fs" />
     <Compile Include="MetalSucksRss.fs" />
