Add domain types and treat RSS feeds as abstractions

--- a/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Content Include="Resources\Sample_RSS_Feed.xml" />
+    <Compile Include="Domain.fs" />
     <Compile Include="RssProvider.fs" />
     <Compile Include="MetalInjectionRss.fs" />
     <Compile Include="MetalSucksRss.fs" />
