--- a/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
+    <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
   </ItemGroup>
 
 </Project>
