Add RSS handler module to ask and handle user input

--- a/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="MetalInjectionRss.fs" />
     <Compile Include="MetalSucksRss.fs" />
     <Compile Include="MetalUndergroundRss.fs" />
+    <Compile Include="RssHandler.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
