--- a/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/RssTypeProvider/RssTypeProvider.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Content Include="Resources\Sample_RSS_Feed.xml" />
     <Compile Include="Domain.fs" />
+    <Compile Include="RssOperations.fs" />
     <Compile Include="RssProvider.fs" />
     <Compile Include="MetalInjectionRss.fs" />
     <Compile Include="MetalSucksRss.fs" />
