--- a/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
@@ -6,9 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Resources\albums.json" />
+    <Content Include="Resources\comments.json" />
+    <Content Include="Resources\photos.json" />
+    <Content Include="Resources\posts.json" />
     <Compile Include="JsonProvider.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
