Add URLS module

--- a/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
@@ -10,11 +10,10 @@
     <Content Include="Resources\comments.json" />
     <Content Include="Resources\photos.json" />
     <Content Include="Resources\posts.json" />
+    <Compile Include="Urls.fs" />
     <Compile Include="JsonProvider.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
-  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
