Add operations module

--- a/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
@@ -10,6 +10,7 @@
     <Content Include="Resources\comments.json" />
     <Content Include="Resources\photos.json" />
     <Content Include="Resources\posts.json" />
+    <Compile Include="Operations.fs" />
     <Compile Include="Urls.fs" />
     <Compile Include="JsonProvider.fs" />
     <Compile Include="Program.fs" />
