--- a/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
+    <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
   </ItemGroup>
 
 </Project>
