--- a/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
+++ b/TypeProvidersWorkshop/JsonTypeProvider/JsonTypeProvider.fsproj
@@ -10,6 +10,9 @@
     <Content Include="Resources\comments.json" />
     <Content Include="Resources\photos.json" />
     <Content Include="Resources\posts.json" />
+    <Compile Include="Domain.fs" />
+    <Compile Include="AuthorsProvider.fs" />
+    <Compile Include="BooksProvider.fs" />
     <Compile Include="Operations.fs" />
     <Compile Include="Urls.fs" />
     <Compile Include="JsonPlaceholderProvider.fs" />
