Add queen discography type provider

--- a/TypeProvidersWorkshop/HtmlProvider/HtmlProvider.fsproj
+++ b/TypeProvidersWorkshop/HtmlProvider/HtmlProvider.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Content Include="Resources\Sample.html" />
     <Compile Include="NugetProvider.fs" />
+    <Compile Include="QueenTypeProvider.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
